[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "py-radix-rs"
version = "0.10.0"
description = "Fast radix tree implementation for IPv4 and IPv6 network prefixes"
authors = [{name = "Michael J. Schultz", email = "mjschultz@gmail.com"}]
license = {text = "BSD-3-Clause"}
readme = "README.rst"
homepage = "https://github.com/mjschultz/py-radix"
repository = "https://github.com/mjschultz/py-radix"
keywords = ["radix", "tree", "trie", "networking", "routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "radix._radix_rs"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]